# audiothumbs-frameworks

./: CMakeLists.txt  README.md
src/: AudioThumbs.cpp  AudioThumbs.desktop  AudioThumbs.h  CMakeLists.txt
